# rust-samplecli

./: Cargo.toml
src/: main.rs
