[package]
name = "samplecli"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = {version="4.0.32", features=["derive"]}
thiserror = "1.0.38"

[[bin]]
name = "main"
path = "src/main.rs"
